logs/scheduler/2024-05-05/handsome_dag/DAGs.py.log
[2024-05-05T08:45:19.484+0000] {processor.py:161} INFO - Started process (PID=32) to work on /opt/airflow/dags/handsome_dag/DAGs.py
[2024-05-05T08:45:19.492+0000] {processor.py:830} INFO - Processing file /opt/airflow/dags/handsome_dag/DAGs.py for tasks to queue
[2024-05-05T08:45:19.520+0000] {logging_mixin.py:188} INFO - [2024-05-05T08:45:19.519+0000] {dagbag.py:540} INFO - Filling up the DagBag from /opt/airflow/dags/handsome_dag/DAGs.py
[2024-05-05T08:45:19.575+0000] {logging_mixin.py:188} INFO - [2024-05-05T08:45:19.569+0000] {dagbag.py:350} ERROR - Failed to import: /opt/airflow/dags/handsome_dag/DAGs.py
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/dagbag.py", line 346, in parse
    loader.exec_module(new_module)
  File "<frozen importlib._bootstrap_external>", line 995, in exec_module
  File "<frozen importlib._bootstrap>", line 488, in _call_with_frames_removed
  File "/opt/airflow/dags/handsome_dag/DAGs.py", line 10, in <module>
    from handsome.ops.products import FetchProductListFromCategoryOperator
  File "/opt/airflow/plugins/handsome/ops/products.py", line 32
    items = asyncio.
                    ^
SyntaxError: invalid syntax
[2024-05-05T08:45:19.577+0000] {processor.py:842} WARNING - No viable dags retrieved from /opt/airflow/dags/handsome_dag/DAGs.py
[2024-05-05T08:45:19.666+0000] {processor.py:183} INFO - Processing /opt/airflow/dags/handsome_dag/DAGs.py took 0.256 seconds
[2024-05-05T08:45:49.775+0000] {processor.py:161} INFO - Started process (PID=40) to work on /opt/airflow/dags/handsome_dag/DAGs.py
[2024-05-05T08:45:49.779+0000] {processor.py:830} INFO - Processing file /opt/airflow/dags/handsome_dag/DAGs.py for tasks to queue
[2024-05-05T08:45:49.783+0000] {logging_mixin.py:188} INFO - [2024-05-05T08:45:49.782+0000] {dagbag.py:540} INFO - Filling up the DagBag from /opt/airflow/dags/handsome_dag/DAGs.py
[2024-05-05T08:45:49.789+0000] {logging_mixin.py:188} INFO - [2024-05-05T08:45:49.787+0000] {dagbag.py:350} ERROR - Failed to import: /opt/airflow/dags/handsome_dag/DAGs.py
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/dagbag.py", line 346, in parse
    loader.exec_module(new_module)
  File "<frozen importlib._bootstrap_external>", line 995, in exec_module
  File "<frozen importlib._bootstrap>", line 488, in _call_with_frames_removed
  File "/opt/airflow/dags/handsome_dag/DAGs.py", line 10, in <module>
    from handsome.ops.products import FetchProductListFromCategoryOperator
  File "/opt/airflow/plugins/handsome/ops/products.py", line 32
    items = asyncio.
                    ^
SyntaxError: invalid syntax
[2024-05-05T08:45:49.789+0000] {processor.py:842} WARNING - No viable dags retrieved from /opt/airflow/dags/handsome_dag/DAGs.py
[2024-05-05T08:45:49.816+0000] {processor.py:183} INFO - Processing /opt/airflow/dags/handsome_dag/DAGs.py took 0.050 seconds
[2024-05-05T08:46:19.969+0000] {processor.py:161} INFO - Started process (PID=48) to work on /opt/airflow/dags/handsome_dag/DAGs.py
[2024-05-05T08:46:19.971+0000] {processor.py:830} INFO - Processing file /opt/airflow/dags/handsome_dag/DAGs.py for tasks to queue
[2024-05-05T08:46:19.974+0000] {logging_mixin.py:188} INFO - [2024-05-05T08:46:19.973+0000] {dagbag.py:540} INFO - Filling up the DagBag from /opt/airflow/dags/handsome_dag/DAGs.py
[2024-05-05T08:46:19.978+0000] {logging_mixin.py:188} INFO - [2024-05-05T08:46:19.977+0000] {dagbag.py:350} ERROR - Failed to import: /opt/airflow/dags/handsome_dag/DAGs.py
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/dagbag.py", line 346, in parse
    loader.exec_module(new_module)
  File "<frozen importlib._bootstrap_external>", line 995, in exec_module
  File "<frozen importlib._bootstrap>", line 488, in _call_with_frames_removed
  File "/opt/airflow/dags/handsome_dag/DAGs.py", line 10, in <module>
    from handsome.ops.products import FetchProductListFromCategoryOperator
  File "/opt/airflow/plugins/handsome/ops/products.py", line 32
    items = asyncio.
                    ^
SyntaxError: invalid syntax
[2024-05-05T08:46:19.980+0000] {processor.py:842} WARNING - No viable dags retrieved from /opt/airflow/dags/handsome_dag/DAGs.py
[2024-05-05T08:46:20.001+0000] {processor.py:183} INFO - Processing /opt/airflow/dags/handsome_dag/DAGs.py took 0.038 seconds
